graylog/es6.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-deploy
  labels:
    service: es-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      service: es-deploy
  serviceName: es-deploy
  template:
    metadata:
      labels:
        service: es-deploy
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: service
                operator: In
                values:
                - es-deploy
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: es
        image: docker.elastic.co/elasticsearch/elasticsearch:6.7.2
        readinessProbe:
          tcpSocket:
            port: 9200
          initialDelaySeconds: 20
          periodSeconds: 30
        ports:
        - containerPort: 9200
        - containerPort: 9300
        volumeMounts:
        - name: datastore
          mountPath: /usr/share/elasticsearch/data
          subPath: elasticsearch
        resources:
          requests:
            memory: 2Gi
            cpu: 250m
          limits:
            memory: 2Gi
            cpu: 500m
      volumes:
      - name: datastore
        persistentVolumeClaim:
          claimName: es6-graylog-volume
---
apiVersion: v1
kind: Service
metadata:
  name: es6
spec:
  selector:
    service: es-deploy
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  - name: "9300"
    port: 9300
    targetPort: 9300
