graylog/graylog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog-deploy
  labels:
    service: graylog-deploy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      service: graylog-deploy
  template:
    metadata:
      labels:
        service: graylog-deploy
    spec:
      containers:
      - name: graylog4
        image: graylog/graylog:4.1.5
        ports:
        - containerPort: 9000
        - containerPort: 5555
        volumeMounts:
        - name: graylog-ca
          mountPath: /etc/graylog/certs/
          readOnly: true
        resources:
          requests:
            memory: 1Gi
            cpu: 250m
          limits:
            memory: 2Gi
            cpu: 500m
      volumes:
      - name: graylog-ca
        secret:
          secretName: graylog-ca
---
apiVersion: v1
kind: Service
metadata:
  name: graylog3
spec:
  selector:
    service: graylog-deploy
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  - name: "5555"
    port: 5555
    targetPort: 5555
