graylog/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graylog-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - secretName: graylog-ingress-certificate
      hosts:
      - logmonitoring.eol-ing.uchile.cl
  rules:
  - host: logmonitoring.eol-ing.uchile.cl
    http:
      paths:
      - path: /
        backend:
          serviceName: graylog4
          servicePort: 9000
